[UPDATE] Estruturação da seção sobre

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!--Início-->
         <main id="inicio" class="inicio">
-            <img id="bg-inicio" src="./assets/img/bg-inicio.webp" alt="imagem de fundo">
+            <img id="bg-inicio" src="./assets/img/bg-inicio.webp" alt="imagem de fundo"> 
             <div class="container-inicio">
                 <img id="bg-inicio-mobile" src="./assets/img/bg-vertical.webp" alt="imagem de fundo">
                 <div class="conteudo-inicio" data-aos="fade-up" data-aos-duration="1000">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="conteudo-sobre">
+                <div class="conteudo-sobre" id="conteudo-sobre-02">
                     <div class="right-sobre" data-aos="fade-right" data-aos-duration="1000">
                         <div class="img-sobre-02">
                             <img src="./assets/img/sobre-img-02.webp" alt="imagem sobre nós">
@@ -144,24 +144,100 @@
                     <div class="titulo-servicos">
                         <h1>Nossos Serviços</h1>
                     </div>
-                    <div class="descricao-servicos" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                        
-                    </div>
                 </div>
                 <div class="servicos-cards">
                     <!--Serviço 1-->
-                    <div class="card-servicos-left" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
+                    <div class="card-servicos-left" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="1000">
                         <div class="card-titulo">
-                            <h1>Lorem ipsum dolor sit.</h1>
+                            <h1>Assessoria Contábil</h1>
+                            <p>Organizamos e cuidamos de toda a contabilidade da sua empresa, sem complicações.</p>
                         </div>
-                        <div class="card-icon"><i class="bi bi-share"></i></div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>                        
+                    </div>
+                    <div class="card-servicos-left" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="1000">
+                        <div class="card-titulo">
+                            <h1>Gestão Financeira</h1>
+                            <p>Organizamos suas finanças para mais controle, clareza e crescimento do negócio.</p>
+                        </div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>                        
+                    </div>
+                    <div class="card-servicos-left" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="1000">
+                        <div class="card-titulo">
+                            <h1>Abertura de Empresas</h1>
+                            <p>Transforme sua ideia em realidade com um CNPJ sem burocracias.</p>
+                        </div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>                        
+                    </div>
+                    <div class="card-servicos-left" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="1000">
+                        <div class="card-titulo">
+                            <h1>Imposto de Renda</h1>
+                            <p>Simplificamos sua declaração para evitar erros, garantir conformidade e maximizar benefícios.</p>
+                        </div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>                        
                     </div>
                     <!--Serviço 2-->
-                    <div class="card-servicos" data-aos="fade-left" data-aos-delay="400" data-aos-duration="1000">
+                    <div class="card-servicos" data-aos="zoom-in" data-aos-delay="400" data-aos-duration="1000">
                         <div class="card-titulo">
-                            <h1>Lorem ipsum dolor sit.</h1>
+                            <h1>Registro de Marcas</h1>
+                            <p>Proteja a identidade do seu negócio com o registro da sua marca.</p>
                         </div>
-                        <div class="card-icon"><i class="bi bi-diagram-3"></i></div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="card-servicos" data-aos="zoom-in" data-aos-delay="400" data-aos-duration="1000">
+                        <div class="card-titulo">
+                            <h1>Regularização Fiscal</h1>
+                            <p>Deixe suas pendências fiscais em dia com nossa consultoria especializada.</p>
+                        </div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="card-servicos" data-aos="zoom-in" data-aos-delay="400" data-aos-duration="1000">
+                        <div class="card-titulo">
+                            <h1>Atendimento para MEI</h1>
+                            <p>Suporte completo desde a abertura até o crescimento de novos patamares.</p>
+                        </div>
+                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                            <span>Confira</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                                <path d="M1,5 L11,5"></path>
+                                <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -359,7 +435,6 @@
     <script src="assets/js/header.js"></script>
     <script src="assets/js/actionButton.js"></script>
     <script src="assets/js/menu.js"></script>
-    <script src="assets/js/slideSobre.js"></script>
     <script src="assets/js/slidePortfolio.js"></script>
 
 </body>
