--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <h1>Assessoria Contábil</h1>
                             <p>Organizamos e cuidamos de toda a contabilidade da sua empresa, sem complicações.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -165,7 +165,7 @@
                             <h1>Gestão Financeira</h1>
                             <p>Organizamos suas finanças para mais controle, clareza e crescimento do negócio.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -178,7 +178,7 @@
                             <h1>Abertura de Empresas</h1>
                             <p>Transforme sua ideia em realidade com um CNPJ sem burocracias.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -191,7 +191,7 @@
                             <h1>Imposto de Renda</h1>
                             <p>Simplificamos sua declaração para evitar erros, garantir conformidade e maximizar benefícios.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -205,7 +205,7 @@
                             <h1>Registro de Marcas</h1>
                             <p>Proteja a identidade do seu negócio com o registro da sua marca.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -218,7 +218,7 @@
                             <h1>Regularização Fiscal</h1>
                             <p>Deixe suas pendências fiscais em dia com nossa consultoria especializada.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -231,7 +231,7 @@
                             <h1>Atendimento para MEI</h1>
                             <p>Suporte completo desde a abertura até o crescimento de novos patamares.</p>
                         </div>
-                        <button class="cta" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">
+                        <button id="cta-servicos" class="cta" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
                             <span>Confira</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -242,27 +242,6 @@
                 </div>
             </div>
         </section>
-        <!--Fim Serviços-->
-
-        <!--Complemento FREE YOUR MIND-->
-        <section id="free-your-mind" class="free-your-mind">
-            <div class="container-free-your-mind" data-aos="fade-up" data-aos-duration="1000">
-                <div class="line-container" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
-                    <span> ALGUMA </span>
-                    <span class="line"></span>
-                </div>
-                <div class="line-container center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                    <span class="line"></span>
-                    <span> FRASE </span>
-                    <span class="line"></span>
-                </div>
-                <div class="line-container right" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
-                    <span class="line"></span>
-                    <span> AQUI </span>
-                </div>
-            </div>
-        </section>
-        <!--Fim FREE YOUR MIND-->
 
         <!--Portfolio-->
         <section id="portfolio" class="portfolio">
@@ -362,7 +341,7 @@
                     </div>
                     <div class="descricao-contato">
                         <ul class="lista-contato">
-                            <li><a href="#">WhatsApp: (55) 99999 - 9999</a></li>
+                            <li><a href="#">WhatsApp: (55) 91111 - 1111</a></li>
                             <li><a href="#">email@seuemail.com.br</a></li>
                             <li><a href="#">Endereço Completo</a></li>
                         </ul>
