--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsividade.css">  
-    <link rel="preload" fetchpriority="high" as="image" href="/assets/img/bg-vertical.webp" type="image/webp">
+    <link rel="preload" fetchpriority="high" as="image" href="assets/img/bg-vertical.webp" type="image/webp">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
