--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img class="img-sobre-02" src="./assets/img/sobre-img-02.webp" alt="imagem sobre nós">
                     </div>
                     <div class="left-sobre" >
-                        <p class="textos-sobre-2">
+                        <p class="textos-sobre-2" data-aos="fade-left" data-aos-duration="1000">
                             Cuidamos de todos os detalhes burocráticos para que você possa focar no que realmente importa: 
                             <span id="texto-sobre-span-2">o crescimento da sua empresa</span>. Nossa equipe entrega agilidade, transparência e acompanhamento personalizado
                             para garantir que sua empresa esteja sempre em conformidade e com os melhores resultados financeiros.
