--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@400;600&display=swap" as="font" type="font/woff2" crossorigin>
 
+	<link href="./assets/img/bg-vertical.webp" rel="preload" as="image" media="(max-width: 480px)">
+	<link href="./assets/img/bg-vertical-md.webp" rel="preload" as="image" media="(min-width: 481px)">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">  
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
