--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="logo">
                 <img src="assets/img/logo-01.png" alt="">
             </div>
-            <div id="navigation-menu-wrapper">
+            
                 <nav id="navigation-menu" class="navigation-menu">
                     <ul id="navigation-menu-list" class="navigation-menu-list">
                         <li><a id="link-inicio" href="#inicio">INÍCIO</a></li>
@@ -34,11 +34,11 @@
                         <li><a id="link-servicos" href="#servicos">SERVIÇOS</a></li>
                         <li><a id="link-contato" href="#footer">CONTATO</a></li>
                     </ul>
+		<button id="portal-do-cliente">
+                	<p><a>Portal do Cliente</a></p>
+            	</button>
                 </nav>
-            </div>
-            <button class="cta" id="portal-do-cliente">
-                <p><a>Portal do Cliente</a></p>
-            </button>
+            
             <div class="menu" id="menu-mobile">
                 <label class="hamburger">
                     <input type="checkbox" id="menuToggle">
